fix:paragraph wrap added

--- a/blocks/_occasion.scss
+++ b/blocks/_occasion.scss
@@ -127,6 +127,8 @@
         }
         &-text{
             color: $black;
+            overflow-wrap: break-word;
+            align-self: center;
         }
     }
     &__users span{
