--- a/blocks/_person.scss
+++ b/blocks/_person.scss
@@ -29,6 +29,7 @@
         position: relative;
     }
     &__text {
+        overflow-wrap: break-word;
         font-weight: 400;
         font-size: 16px;
         line-height: 22px;
